<resources>
  <!--Use this URL for the live server-->
  <string name="base_url">https://jscpeterson.com/</string>
  <!--Use this URL for debugging a local host-->
  <!--<string name="base_url">http://10.0.2.2:5050/</string>-->

  <string name="alert_exit">Exit</string>
  <string name="alert_ok">OK</string>
  <string name="alert_signout">Sign Out</string>
  <string name="app_name">abq-film-tour</string>
  <string name="bookmark_added_notification">Bookmark added.</string>
  <string name="bookmark_removed_notification">Bookmark removed.</string>
  <string name="bookmark">Bookmark</string>
  <string name="cancel">Cancel</string>
  <string name="cannot_enable_location">Cannot enable location.</string>
  <string name="client_id">650840836337-o0r50gnee6g2h5bg9lkq7d4776bfvp9c.apps.googleusercontent.com</string>
  <string name="cloudinary_unsigned_preset">jgg1ktxp</string>
  <string name="dimension_ratio_image_header">3:2</string>
  <string name="dimension_ratio_poster">w,2:3</string>
  <string name="enable_loc">Enable Location</string>
  <string name="enable_location_settings">Your locations setting is not enabled. Please enable it in settings menu.</string>
  <string name="error_cloudinary">Failed to reach cloud service.</string>
  <string name="error_default">Unknown error</string>
  <string name="error_forbidden">You are forbidden from using this service.</string>
  <string name="error_http">HTTP error code %d</string>
  <string name="error_io">Failed to reach server. Check your network connection.</string>
  <string name="error_unauthorized">Please sign in again.</string>
  <string name="exit_alert_dialog">Exit</string>
  <string name="help">Help</string>
  <string name="image_unimplemented">Sorry, this feature is still a work in progress. Check our website for updates!  abqfilmtour.github.io</string>
  <string name="imdb_link">Link to IMDb Page</string>
  <string name="imdb_url">https://www.imdb.com/title/</string>
  <string name="loc_settings">Location Settings</string>
  <string name="location_id_tag">locationID</string>
  <string name="log_null_production_type">Production %s has a null type.</string>
  <string name="menu_all_locations">All Locations</string>
  <string name="menu_all_near_me">Near Me</string>
  <string name="menu_bookmarks">Bookmarks</string>
  <string name="menu_film">Film</string>
  <string name="menu_no_bookmarks">You have no bookmarks saved. Select the bookmark button on an existing location to create your own tour.</string>
  <string name="menu_no_savedtitle">Select an existing title from Films or TV Shows to submit your location to.</string>
  <string name="menu_submit">Submit Your Location</string>
  <string name="menu_television">Television</string>
  <string name="not_in_burque">You are outside of Albuquerque city limits.</string>
  <string name="null_location">Your location could not be retrieved. Check if you have Location turned on for your device.</string>
  <string name="oauth2_header">Bearer %s</string>
  <string name="please_wait">Please wait for your content to load…</string>
  <string name="poster_url_format">%srest/productions/%s/poster</string>
  <string name="production_poster">film poster</string>
  <string name="select_image">Select an Image</string>
  <string name="selected_options_films_title">FILMS</string>
  <string name="selected_options_series_title">TV SHOW</string>
  <string name="sign_out">Sign Out</string>
  <string name="startup_select_title">Select a title from the drop down menu to get started!</string>
  <string name="submission_failed">We were unable to process your request.</string>
  <string name="submission_successful">Post submitted! It will display once it is approved.</string>
  <string name="submit">Submit</string>
  <string name="submit_comment">Post a Comment</string>
  <string name="submit_image_no_image">Please select an image.</string>
  <string name="submit_location_button_format">Submit for %s</string>
  <string name="submit_new_site_name">Enter the name of this location here.</string>
  <string name="title_activity_maps">Film Tour</string>
  <string name="title_all_locations">All Locations</string>
  <string name="title_application">Film Tour</string>
  <string name="title_bookmarks">Create Your Own Tour</string>
  <string name="title_near_me">Nearby Locations</string>
  <string name="unable_to_signin">Unable to sign in</string>
  <string name="upload_image">Post an Image</string>
  <string name="user_comment_hint">Enter your comment here.</string>
  <string name="user_name">User Name</string>
  <string name="user_profile_picture">user profile picture</string>
  <string name="error_message_version">Version out of date. Please visit jscpeterson.com/abqfilmtour</string>

</resources>